methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:2: error: Missing closing brace `}' assumed here
def isFacingTrail():Boolean = {
^SlugTracking:2: error: expected class or object definition
def isFacingTrail():Boolean = {
^